--- a/scripts/templates/pom.mustache
+++ b/scripts/templates/pom.mustache
@@ -19,11 +19,12 @@
     </parent>
 {{/parentOverridden}}
 
-   <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
+    <distributionManagement>
+        <repository>
+        <id>ossrh</id>
+        <name>Central Repository OSSRH</name>
+        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 
 
