fix: fixing examples.

--- a/scripts/templates/pom.mustache
+++ b/scripts/templates/pom.mustache
@@ -7,8 +7,9 @@
     <name>{{artifactId}}</name>
     <description>Red Hat Aplicaiton Services Java SDK</description>
     <url>https://github.com/redhat-developer/app-services-sdk-java</url>
+    
+    <version>0.0.1-SNAPSHOT</version>
 
-    <version>{{artifactVersion}}</version>
     <scm>
         <connection>{{scmConnection}}</connection>
         <developerConnection>{{scmDeveloperConnection}}</developerConnection>
